fixing new slashed containers overflowing

--- a/assets/less/aec.less
+++ b/assets/less/aec.less
@@ -540,6 +540,7 @@ ul.aec-sidenav {
 
 	color: #fff;
 	text-shadow: 0 2px 2px rgba(0,0,0,1);
+	overflow: hidden;
 
 	/*border-top: 40px solid rgba(255,255,255,0.5);
 	border-bottom: 40px solid rgba(255,255,255,0.5);*/
